--- a/portfolio_update_v1 2/portfolio_update_v1 2/styles.css
+++ b/portfolio_update_v1 2/portfolio_update_v1 2/styles.css
@@ -28,20 +28,24 @@ a:hover {
   width: 100%;
   background: black;
   min-height: 30px;
-  padding: 10px;
+  padding-bottom: 10px;
+  max-height: 50px;
   position: fixed;
   text-align: center;
   opacity: 75%;
-  padding-top: 20px;
 }
 .nav {
   display: flex;
-  justify-content: space-around;
+  flex-wrap: wrap;
   font-weight: 400;
   list-style-type: none;
-  margin: 0 ;
-  padding: 1rem 1.5rem;
   --bold: 700;
+}
+
+.nav a{
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .menu-link {
@@ -49,9 +53,7 @@ a:hover {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding: 1rem 1.5rem;
-  color: black;
-  text-decoration: none;
+ 
 }
 
 .nav a::after {
@@ -61,7 +63,8 @@ a:hover {
   overflow: hidden;
   user-select: none;
   pointer-events: none;
-  font-weight: bold;
+  font-weight: 800;
+  padding:10px
 }
 
 .nav .name {
@@ -70,14 +73,14 @@ a:hover {
     color: white;
 }
 .nav li {
-  padding: 5px 10px 10px 10px;
+  padding: 10px
 }
 .nav a {
   transition: all .5s;
 }
 .nav a:hover {
   color: white;
-  font-weight: 800;
+  font-weight: 800
 }
 
 header {
